[gd_scene load_steps=18 format=3 uid="uid://dpdrvmamgu0eg"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_j3vhw"]
[ext_resource type="Texture2D" uid="uid://ok5jkf5injp8" path="res://assets/images/game_over_screen/gameover.png" id="2_b0w6r"]
[ext_resource type="FontFile" uid="uid://d14s525nrgj5o" path="res://assets/fonts/Playon-reg.ttf" id="4_u1yi4"]
[ext_resource type="PackedScene" uid="uid://4rs8c0tprrq2" path="res://scenes/elements/grass_scene.tscn" id="5_0tbj3"]
[ext_resource type="Texture2D" uid="uid://bj622vb8ax6ft" path="res://assets/images/game_over_screen/scoreboard.png" id="8_5tivy"]
[ext_resource type="Texture2D" uid="uid://b2rf3ueh2sic7" path="res://assets/images/game_over_screen/HighScore.png" id="8_y0pvf"]
[ext_resource type="Texture2D" uid="uid://dxflg281hc6q5" path="res://assets/images/game_over_screen/try_again_sign.svg" id="9_0ey2x"]
[ext_resource type="Texture2D" uid="uid://b7ye18qi15ivo" path="res://assets/images/game_over_screen/grass/3-grass.svg" id="10_b40g4"]
[ext_resource type="Texture2D" uid="uid://c88h500syw2fh" path="res://assets/images/game_over_screen/try_again.svg" id="11_4jf1d"]

[sub_resource type="Theme" id="Theme_4pl6y"]
default_font = ExtResource("4_u1yi4")
default_font_size = 35

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_273uv"]
load_path = "res://.godot/imported/confirm_umpressed_button.svg-7d1e3befc02f942f439bf9cb84e4aa64.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bvcpb"]
load_path = "res://.godot/imported/confirm_pressed_button.svg-0432f6b84ca4d38b2ac625cf8ae7fc26.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a6uo3"]
load_path = "res://.godot/imported/warning_umpressed_button.svg-301ed5e9562999a561e766a6d7b98efa.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_505sy"]
load_path = "res://.godot/imported/warning_pressed_button.svg-077fa6ac70a462f58a4a81cb1fe35451.ctex"

[sub_resource type="Animation" id="Animation_dcl3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8f8s8"]
resource_name = "highscore"
length = 6.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(1, 1), Vector2(0.9, 0.9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0605w"]
_data = {
"RESET": SubResource("Animation_dcl3w"),
"highscore": SubResource("Animation_8f8s8")
}

[node name="GameOverScene" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_j3vhw")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.478431)
metadata/_edit_lock_ = true

[node name="Gameover" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = 527.0
offset_right = -576.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b0w6r")
expand_mode = 1
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="GrassScene2" parent="." instance=ExtResource("5_0tbj3")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="Scoreboard" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 60.0
offset_right = 1039.0
offset_bottom = 661.0
pivot_offset = Vector2(365, 357)
texture = ExtResource("8_5tivy")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="Scoreboard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 198.0
offset_right = 118.0
offset_bottom = 444.0
grow_horizontal = 2
pivot_offset = Vector2(126, 115)
theme = SubResource("Theme_4pl6y")
theme_override_colors/font_color = Color(0.772549, 0.866667, 0, 1)
theme_override_colors/font_shadow_color = Color(0.616532, 0.265232, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 45
theme_override_constants/shadow_outline_size = 45
theme_override_font_sizes/font_size = 251
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sign" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 855.0
offset_right = 1294.0
offset_bottom = 2290.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("9_0ey2x")

[node name="RestartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -833.0
offset_right = 494.0
offset_bottom = -701.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("CompressedTexture2D_273uv")
texture_pressed = SubResource("CompressedTexture2D_bvcpb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="RestartButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.866667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_u1yi4")
theme_override_font_sizes/font_size = 86
text = "RESTART"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RankingButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -647.0
offset_right = 494.0
offset_bottom = -515.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("CompressedTexture2D_a6uo3")
texture_pressed = SubResource("CompressedTexture2D_505sy")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="RankingButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.866667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_u1yi4")
theme_override_font_sizes/font_size = 86
text = "RANKING"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Highscore" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 432.0
offset_top = 450.0
offset_right = 1047.0
offset_bottom = 691.0
pivot_offset = Vector2(307, 119)
texture = ExtResource("8_y0pvf")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Highscore"]
active = false
libraries = {
"": SubResource("AnimationLibrary_0605w")
}
autoplay = "highscore"

[node name="TryAgain" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 906.0
offset_right = 1213.0
offset_bottom = 1116.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("11_4jf1d")

[node name="grass3" type="TextureRect" parent="."]
z_index = 16
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -840.0
offset_top = -116.0
offset_right = 876.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_b40g4")

[connection signal="is_highscore" from="." to="." method="_on_is_highscore"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="RankingButton" to="." method="_on_ranking_button_pressed"]
